objects/Credit_Card_Transaction__c.object
<CustomObject>
    <description>Individual transactions on a credit card or payment authorization</description>
    <fields>
        <fullName>Above_Warning_Level__c</fullName>
        <formula>(TODAY() - DATEVALUE(Transaction_Date_Time__c)) &gt;= Credit_Card__r.Age_Limit_Warning_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Above Warning Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Location__c</fullName>
        <description>acceptLocation field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Merchant information from their POS device</inlineHelpText>
        <label>Accept Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>IF( Reversed__c = TRUE, 0,
    IF( Closed__c = TRUE,  
        VALUE( Posted_Amount__c ),
        VALUE( Pre_Auth_Amount__c ) 
    ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Code__c</fullName>
        <description>approvalCode field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Authorization number given for the transaction</inlineHelpText>
        <label>Approval Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Industry_Code__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Industry Category</inlineHelpText>
        <label>CC Industry Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Trans_No__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Credit Card Transaction Number</inlineHelpText>
        <label>CC Trans No</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Has the transaction been related to an Expense item or otherwise cleared?</inlineHelpText>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>IF(OR
    (OR(ISPICKVAL(Transaction_Status__c,&apos;Posted&apos;),ISPICKVAL(Transaction_Status__c,&apos;Credit&apos;),ISPICKVAL(Transaction_Status__c,&apos;Declined&apos;)),
    AND(ISPICKVAL(Transaction_Status__c,&apos;Authorized&apos;), Reversed__c = TRUE)),
    TRUE,  /* Transaction is Closed */
    FALSE  /* Transaction is Open   */
)</formula>
        <inlineHelpText>TRUE indicates the transaction has reached a final status and will not change further</inlineHelpText>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corrective_Action__c</fullName>
        <description>correctiveAction field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Message describing the suggested action in response to the decline code</inlineHelpText>
        <label>Corrective Action</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Credit Card</label>
        <referenceTo>Credit_Card__c</referenceTo>
        <relationshipLabel>Credit Card Transactions</relationshipLabel>
        <relationshipName>Credit_Card_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Decline_Code__c</fullName>
        <description>declineCode field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Code for a Declined Transaction</inlineHelpText>
        <label>Decline Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decline_Message__c</fullName>
        <description>declineMessage field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Message explaining the decline code, if applicable</inlineHelpText>
        <label>Decline Message</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Description__c</fullName>
        <description>mccDescription field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Message identifying the MCC</inlineHelpText>
        <label>MCC Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Group__c</fullName>
        <description>mccGroup field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Merchant Category Code group</inlineHelpText>
        <label>MCC Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Number__c</fullName>
        <description>mccNumber field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>4 digit Merchant Category Code for the merchant receiving the payment</inlineHelpText>
        <label>MCC Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Address__c</fullName>
        <description>merchantAddress field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Physical street address for the merchant</inlineHelpText>
        <label>Merchant Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_City__c</fullName>
        <description>merchantCity field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>City for the merchant</inlineHelpText>
        <label>Merchant City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Name__c</fullName>
        <description>merchantName field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Merchant receivinig the card payment</inlineHelpText>
        <label>Merchant Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_State__c</fullName>
        <description>merchantState field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>State/Province for the merchant</inlineHelpText>
        <label>Merchant State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Zip__c</fullName>
        <description>merchantZIP field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Postal code for the merchant</inlineHelpText>
        <label>Merchant Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_Id__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Place Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_Name__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Place Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Date_F__c</fullName>
        <formula>DATEVALUE(Posted_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posted_Amount__c</fullName>
        <description>postedAmount field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Amount in USD posted in the transaction</inlineHelpText>
        <label>Posted Amount</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted_Currency__c</fullName>
        <formula>VALUE( Posted_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posted Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Posted_Date_Time__c</fullName>
        <description>Combination of postedDate and postedTime fields from API response
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Posted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pre_Auth_Amount__c</fullName>
        <description>preAuthAmount field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>If the authorized amount is a credit, the value will be preceded by a minus sign</inlineHelpText>
        <label>Pre-Auth Amount</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Auth_Currency__c</fullName>
        <formula>VALUE( Pre_Auth_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Auth Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prompted_Id__c</fullName>
        <description>promptedID field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>&lt;= 6-digit ID number that can authorize a transaction or show what is entered at the POS (like a PIN)</inlineHelpText>
        <label>Prompted Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reversal_Flag__c</fullName>
        <description>reversalFlag
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Indicates if the transaction was a reversal</inlineHelpText>
        <label>Reversal Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reversed__c</fullName>
        <formula>IF(
CASE(Reversal_Flag__c,
    &apos;C&apos;, 0,    /* INCLUDE - Chargeback/Credit - Negative amount to offset another transaction */
    &apos;N&apos;, 0,    /* INCLUDE - None - No action, waiting to Post */
    &apos;P&apos;, 0,    /* INCLUDE - Posted (?) - Definition pending verification from Comdata */
    &apos;R&apos;, 1,    /* IGNORE - Reversed - Transaction reversed */
    &apos;X&apos;, 1,    /* IGNORE - Expired - Authorization expired after 30 days */
    &apos;Y&apos;, 1,    /* IGNORE - Reversed - Transaction reversed by supervisor */
    0) = 0, FALSE, TRUE)</formula>
        <inlineHelpText>If True, Transaction Amount does not count toward balance or pending amounts.</inlineHelpText>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Time__c</fullName>
        <description>Combination of transactionDate and transactionTime fields from API response
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Transaction Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Hour__c</fullName>
        <description>Can be used in reports and dashboards for grouping</description>
        <formula>TEXT(
     CASE(
          VALUE(LEFT(RIGHT(TEXT(Transaction_Date_Time__c),FIND(&quot; &quot;, TEXT( Transaction_Date_Time__c ))-2),2)), 
          00,19, 
          01,20, 
          02,21, 
          03,22, 
          04,23, 
          05,00, 
          06,01, 
          07,02, 
          08,03, 
          09,04, 
          10,05, 
          11,06, 
          12,07, 
          13,08, 
          14,09, 
          15,10, 
          16,11, 
          17,12, 
          18,13, 
          19,14, 
          20,15, 
          21,16, 
          22,17, 
          23,18, 
          00
      )
 )</formula>
        <inlineHelpText>Hour of the day when the transaction occurred.  Does not adjust for Daylight Savings</inlineHelpText>
        <label>Transaction Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <description>transactionStatus field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Transaction_Key__c</fullName>
        <description>This fields gets populated with Card_Number__c + &apos;-&apos; + MCC_Number__c + &apos;-&apos; + MCC_Group__c + &apos;-&apos; + Approval_Code__c + Transaction_Date_Time__c</description>
        <externalId>true</externalId>
        <label>Unique Transaction Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Card Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Credit_Card__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cleared_on_Expense_Report</fullName>
        <columns>NAME</columns>
        <columns>Credit_Card__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cleared__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Posted,Credit</value>
        </filters>
        <label>Cleared on Expense Report</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Posted_Date_Time__c</columns>
        <columns>Credit_Card__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>Created_this_Month</fullName>
        <columns>NAME</columns>
        <columns>Credit_Card__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/1/2014 12:00 AM</value>
        </filters>
        <label>Created Since March 1st</label>
    </listViews>
    <listViews>
        <fullName>Declined</fullName>
        <columns>NAME</columns>
        <columns>Credit_Card__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Declined</value>
        </filters>
        <label>Declined</label>
    </listViews>
    <listViews>
        <fullName>MCC_Group</fullName>
        <columns>NAME</columns>
        <columns>Credit_Card__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCC_Group__c</field>
            <operation>equals</operation>
            <value>30005</value>
        </filters>
        <label>MCC Group</label>
    </listViews>
    <listViews>
        <fullName>Not_Cleared_on_Expense_Report</fullName>
        <columns>NAME</columns>
        <columns>Credit_Card__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cleared__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Posted,Credit</value>
        </filters>
        <label>Not Cleared on Expense Report</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Yet_Posted</fullName>
        <columns>NAME</columns>
        <columns>Credit_Card__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Posted_Date_Time__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <columns>Reversal_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Authorized</value>
        </filters>
        <filters>
            <field>Closed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Yet Posted</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Expense_Report</fullName>
        <columns>NAME</columns>
        <columns>Credit_Card__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cleared__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>notEqual</operation>
            <value>Declined</value>
        </filters>
        <label>Pending Expense Report</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Posted_Cleared_on_Expense_Report</fullName>
        <columns>NAME</columns>
        <columns>Credit_Card__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cleared__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </filters>
        <label>Posted &amp; Cleared on Expense Report</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transactions_Date_Range</fullName>
        <columns>NAME</columns>
        <columns>Credit_Card__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Pre_Auth_Amount__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Posted_Amount__c</columns>
        <columns>MCC_Group__c</columns>
        <columns>Accept_Location__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Cleared__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>5/18/2014 3:00 PM</value>
        </filters>
        <filters>
            <field>Transaction_Date_Time__c</field>
            <operation>lessOrEqual</operation>
            <value>5/18/2014 6:00 PM</value>
        </filters>
        <label>Transactions Date Range</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Credit Card Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Card Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>